logs/Write_data_to_postgres_then_to_elasticsearch/Create_table_in_postgres/2020-11-28T13:57:56.810435+00:00/1.log
[2020-11-28 19:28:00,951] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-28T13:57:56.810435+00:00 [queued]>
[2020-11-28 19:28:00,981] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-28T13:57:56.810435+00:00 [queued]>
[2020-11-28 19:28:00,981] {taskinstance.py:880} INFO - 
--------------------------------------------------------------------------------
[2020-11-28 19:28:00,981] {taskinstance.py:881} INFO - Starting attempt 1 of 1
[2020-11-28 19:28:00,982] {taskinstance.py:882} INFO - 
--------------------------------------------------------------------------------
[2020-11-28 19:28:00,990] {taskinstance.py:901} INFO - Executing <Task(PostgresOperator): Create_table_in_postgres> on 2020-11-28T13:57:56.810435+00:00
[2020-11-28 19:28:00,993] {standard_task_runner.py:54} INFO - Started process 37082 to run task
[2020-11-28 19:28:01,022] {standard_task_runner.py:77} INFO - Running: ['airflow', 'run', 'Write_data_to_postgres_then_to_elasticsearch', 'Create_table_in_postgres', '2020-11-28T13:57:56.810435+00:00', '--job_id', '460', '--pool', 'default_pool', '--raw', '-sd', 'DAGS_FOLDER/csv_pg_elasticsearch.py', '--cfg_path', '/var/folders/ff/pqhf5klx0msdsn3m1cnq4cxr0000gn/T/tmpj_4_zqg5']
[2020-11-28 19:28:01,025] {standard_task_runner.py:78} INFO - Job 460: Subtask Create_table_in_postgres
[2020-11-28 19:28:01,071] {logging_mixin.py:112} INFO - Running %s on host %s <TaskInstance: Write_data_to_postgres_then_to_elasticsearch.Create_table_in_postgres 2020-11-28T13:57:56.810435+00:00 [running]> 47.43.168.192.in-addr.arpa
[2020-11-28 19:28:01,099] {postgres_operator.py:62} INFO - Executing: CREATE TABLE sampletable(
            Date text,
            Open text,
            High text,
            Low text,
            Close text,
        );
        SET client_encoding = WIN1252;
        
[2020-11-28 19:28:01,108] {base_hook.py:89} INFO - Using connection to: id: postgres_default. Host: localhost, Port: None, Schema: testdb, Login: testuser, Password: XXXXXXXX, extra: None
[2020-11-28 19:28:01,115] {dbapi_hook.py:174} INFO - CREATE TABLE sampletable(
            Date text,
            Open text,
            High text,
            Low text,
            Close text,
        );
        SET client_encoding = WIN1252;
        
[2020-11-28 19:28:01,118] {taskinstance.py:1150} ERROR - syntax error at or near ")"
LINE 7:         );
                ^
Traceback (most recent call last):
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 984, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/operators/postgres_operator.py", line 65, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/Users/yudi/opt/anaconda3/envs/airflow/lib/python3.6/site-packages/airflow/hooks/dbapi_hook.py", line 175, in run
    cur.execute(s)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 7:         );
                ^

[2020-11-28 19:28:01,121] {taskinstance.py:1194} INFO - Marking task as FAILED. dag_id=Write_data_to_postgres_then_to_elasticsearch, task_id=Create_table_in_postgres, execution_date=20201128T135756, start_date=20201128T135800, end_date=20201128T135801
[2020-11-28 19:28:05,949] {local_task_job.py:102} INFO - Task exited with return code 1
